oci-private-vcn-native/oci-private-apps-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oci-private-apps
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: oci-private-apps
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # This defaults to the current namespace, there is no need to specify it, juste here for documentation
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: ${CERTIFICATE_SECRET_NAME}
