oci-private-vcn-native/echo-app.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: default
spec:
  parentRefs:
    - name: oci-private-apps
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-service
          namespace: default
          port: 80
      filters:    # Cache control if using OCI Web Application Acceleration
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: "Cache-Control"
                value: "no-cache"

---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: "${ECHO_IMAGE}"
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
